--- a/cpp.html
+++ b/cpp.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
-	<link rel="stylesheet" type="text/css" href="css/media	.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <header>
 			<div class="container">
@@ -24,32 +24,32 @@
 		<div class = "boxP">
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-				<p class="cent battleship">Battleship</p>
+				<p class="cent">Battleship</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
-				<p class="cent wind">Vandermonde Matrix</p>
+				<p class="cent">Vandermonde Matrix</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
-				<p class="cent solid">Connect Four</p>
+				<p class="cent">Connect Four</p>
 			</span>
 			<br><br>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
-				<p class="cent game">2048</p>
+				<p class="cent">2048</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
-				<p class="cent cpp">Mastermind</p>
+				<p class="cent">Mastermind</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
-				<p class="cent solid">Matrix Inverse</p>
+				<p class="cent">Matrix Inverse</p>
 			</span>
 		</div>
 	<!-- </div> -->
