--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 			 	<div class = "box">
 					<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
-					<!-- <p class = "col">About Me</p> -->
 					<div class="col"><p class="about">About Me </p>
 					<p class="space">I am a mechanical engineering student, passionate about creating innovative solutions to complex ideas.</p><br> <!-- This break is to seperate onto next line -->
 
@@ -44,24 +43,22 @@
 					<p class="about2">Interests </p> <p>I enjoy projects that require continuous learning and application of knowledge to optimize designs. </p><br>
 					</div>
 
-					
-
 					<h2>Portfolio Highlights</h2>
 					<div style= "display: inline";>
 
 						<span class="cont">
 							<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-							<p class="cent wind">1315-MH Wind Tunnel</p>
+							<p class="cent">1315-MH Wind Tunnel</p>
 						</span>
 						<span class="portpad"></span>
 						<span class="cont">
 							<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-							<p class="cent solid">3D Modelling</p>
+							<p class="cent">3D Modelling</p>
 						</span>
 						<span class="portpad"></span>
 						<span class="cont">
 							<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
-							<p class="cent cpp">C++ Projects</p>
+							<p class="cent">C++ Projects</p>
 						</span>
 					</div>
 
