--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,17 @@
 	<div class = "boxP">
 		<span class="cont">
 			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-			<p class="cent wind">1315-MH Wind Tunnel</p>
+			<p class="cent">1315-MH Wind Tunnel</p>
 		</span>
 		<span class="portpad"></span>
 		<span class="cont">
 			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-			<p class="cent solid">3D Modelling</p>
+			<p class="cent">3D Modelling</p>
 		</span>
 		<span class="portpad"></span>
 		<span class="cont">
 			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent cpp">C++ Projects</p>
+			<p class="cent">C++ Projects</p>
 		</span>
 	</div>
 
