--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,7 @@
 	<p class = "titleP">Portfolio</p>
 	<p class = "padP"></p>
 	<div class = "boxP">
-		<span class="cont">
-			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-			<p class="cent">1315-MH Wind Tunnel</p>
-		</span>
-		<span class="portpad"></span>
+		
 		<span class="cont">
 			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
 			<p class="cent">3D Modelling</p>
@@ -35,6 +31,113 @@
 		<span class="cont">
 			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
 			<p class="cent">C++ Projects</p>
+		</span>
+		<span class="portpad"></span>
+		<span class="cont">
+			<a href="autocad.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+			<p class="cent">AutoCAD</p>
+		</span>
+		<br><br>
+		<span class="cont">
+			<img id = "portpic7" src="img/wind tunnel2.jpg"></a>
+			<p class="cent">1315-MH Wind Tunnel</p>
+
+			<div id="myModal7" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img07">
+				  <div id="caption7"></div>
+				</div>
+				<script>
+					var modal = document.getElementById('myModal7');
+
+					// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic7");
+					var modalImg = document.getElementById("img07");
+					var captionText = document.getElementById("caption7");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    modalImg.alt = this.alt;
+					    captionText.innerHTML = "ok";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[0];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+		</span>
+		<span class="portpad"></span>
+		<span class="cont">
+			<img id = "portpic8" src="img/waterpump.jpg"></a>
+			<p class="cent">Freezing and Cooling Technologies</p>
+
+			<div id="myModal8" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img08">
+				  <div id="caption8"></div>
+				</div>
+				<script>
+					var modal = document.getElementById('myModal8');
+
+					// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic8");
+					var modalImg = document.getElementById("img08");
+					var captionText = document.getElementById("caption8");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    modalImg.alt = this.alt;
+					    captionText.innerHTML = "rip";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[1];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+		</span>
+		<span class="portpad"></span>
+		<span class="cont">
+			<img id = "portpic9" src="img/code.png"></a>
+			<p class="cent">Accessibility Device</p>
+
+			<div id="myModal9" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img09">
+				  <div id="caption9"></div>
+				</div>
+				<script>
+					var modal = document.getElementById('myModal9');
+
+					// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic9");
+					var modalImg = document.getElementById("img09");
+					var captionText = document.getElementById("caption9");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    modalImg.alt = this.alt;
+					    captionText.innerHTML = "snak";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[2];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
 		</span>
 	</div>
 
