3d page entirely completed
- create new pages for wind tunnel and me100 projects
- make experience page simple with links for resume, github, linkedin

--- a/3d.html
+++ b/3d.html
@@ -25,7 +25,7 @@
 		<div class = "boxP">
 		<!-- <div class="col"> -->
 			<span class="cont">
-				<img id = "portpic6" src="img/battleship.jpg">
+				<img id = "portpic6" src="img/fsaecar.png">
 				<p class="cent">Formula Motorsports</p>
 
 				<div id="myModal6" class="modal">
@@ -42,9 +42,8 @@
 					var captionText = document.getElementById("caption6");
 					img.onclick = function(){
 					    modal.style.display = "block";
-					    modalImg.src = this.src;
-					    modalImg.alt = this.alt;
-					    captionText.innerHTML = "hello";
+					    modalImg.src = "img/fsaeback2.png";
+					    captionText.innerHTML = "This fall I joined the Formula Motorsports student design team. As part of this team, I created the chain guard for the 2017 racecar using Solidworks (shown in purple on the left). The part was designed in adherence to the competition rules, while improving the design of the 2016 chain guard design.";
 					}
 
 					// Get the <span> element that closes the modal
@@ -141,7 +140,7 @@
 					var captionText = document.getElementById("caption3");
 					img.onclick = function(){
 					    modal.style.display = "block";
-					    modalImg.src = "img/trophyback.png";
+					    modalImg.src = "img/trophyback2.png";
 					    captionText.innerHTML = "<br>I created a model of a trophy using ProDesktop, then rendered the original model. <br>Rendering options: burnished gold material, room lighting, 50mm camera lens.";
 					}
 
@@ -207,8 +206,8 @@
 					var captionText = document.getElementById("caption5");
 					img.onclick = function(){
 					    modal.style.display = "block";
-					    modalImg.src = this.src;
-					    captionText.innerHTML = "blub";
+					    modalImg.src = "img/horseback.png";
+					    captionText.innerHTML = "I made this rocking horse model by taking measurements of this toy, then recreating the design on ProDesktop. I learnt to manage assemblies and use the different types of mates effectively.";
 					}
 
 					// Get the <span> element that closes the modal
