--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				 	<img class = "back" src="img/background2.jpg">
 				</div> 
 
-				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span> <!-- <a href="https://www.linkedin.com/in/kaarthicpulogarajah"><img style= "max-width: 80%;" src="img/linkedin.png"></a> -->     <a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
 				<div id="block">
 				<p class="iam">I am a <br> </p>
