--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
 			<p class="cent">C++ Projects</p>
 		</span>
 		<span class="portpad"></span>
-		<span class="cont">
+		<!-- <span class="cont">
 			<a href="autocad.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
 			<p class="cent">AutoCAD</p>
-		</span>
-		<br><br>
+		</span> -->
+		
 		<span class="cont">
 			<img id = "portpic7" src="img/wind tunnel2.jpg"></a>
 			<p class="cent">1315-MH Wind Tunnel</p>
@@ -71,7 +71,8 @@
 				</script>
 
 		</span>
-		<span class="portpad"></span>
+		<br><br>
+		
 		<span class="cont">
 			<img id = "portpic8" src="img/waterpump.jpg"></a>
 			<p class="cent">Freezing and Cooling Technologies</p>
