Finished all content
-update linkedin and resume
-fix media queries

--- a/cpp.html
+++ b/cpp.html
@@ -23,32 +23,32 @@
 		<p class = "padP"></p>
 		<div class = "boxP">
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
 				<p class="cent">Battleship</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
 				<p class="cent">Vandermonde Matrix</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
 				<p class="cent">Connect Four</p>
 			</span>
 			<br><br>
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
 				<p class="cent">2048</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
 				<p class="cent">Mastermind</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
-				<a href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
+				<a target="_blank" href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
 				<p class="cent">Matrix Inverse</p>
 			</span>
 		</div>
