--- a/experience.html
+++ b/experience.html
@@ -6,6 +6,7 @@
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/style3.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <header>
@@ -21,8 +22,12 @@
 
 	<p class = "titleP">Experience</p>
 	<p class = "padP"></p>
-	<div class = "box">
-	<p class="intro">Here you will find</p>
+	<div class = "boxP" style="padding-bottom:12%;">
+	<a target="_blank" class="link" href="resume.pdf"><img class="logo" src="img/adobe.png">Resume</a><br>
+	<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicpulogarajah"><img class="logo" src="img/linkedin.png">LinkedIn</a><br>
+	<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a><br>
+
+
 	</div>
 
 </main>
