--- a/portfolio.html
+++ b/portfolio.html
@@ -41,20 +41,19 @@
 		<span class="cont">
 			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
 			<p class="cent">1315-MH Wind Tunnel</p>
-
 		</span>
 		<br><br>
-		
-		<span class="cont">
-			<a href="fridge.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-			<p class="cent">Freezing and Cooling Technologies</p>
-
-		</span>
-		<span class="portpad"></span>
 		<span class="cont">
 			<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
 			<p class="cent">Assistive Technology</p>
 		</span>
+		
+		<span class="portpad"></span>
+		<span class="cont">
+			<a href="fridge.html"><img class = "portpics" src="img/ice.jpg"></a>
+			<p class="cent">Freezing and Cooling Technologies</p>
+		</span>
+		
 	</div>
 
 </main>
