--- a/fridge.html
+++ b/fridge.html
@@ -1,1 +1,50 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Kaarthic Pulogarajah</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="shortcut icon" href="img/icon4.png"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/style3.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
+</head>
+<header>
+			<div class="container">
+			
+			 	<img class = "back" src="img/background2.jpg">
+			</div>
+</header>
+<body>
+<main>
+
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+
+	<p id = "titleF">Freezing and Cooling Technologies 	</p>
+	<p class = "padP"></p>
+	<div class = "boxP">
+
+	<p class="text">This project was intended as a submission to a NineSigma Innovation Contest: <a target="_blank" style= "color:#0000EE;" href="https://ninesights.ninesigma.com/web/unilever-gallery/needs-listing/-/needs-portlet/viewNeed?_NeedsPortlet_WAR_NeedPortletsportlet_needId=706"><u><i>New and Novel Freezing and Cooling Technologies</i></u></a></p>
+	<p class="text">The purpose of this challenge was to design an innovative technology to chill and store food without accessing power from the grid. My group and I came up with a solution based loosely from a Zeer Pot. Our solution was to design a pot with a layer of sand or soil around it, surrounding by another pot of a semi-permeable membrane. Water would be added to the sand and when the water evaporated, the entire system would decrease in temperature.</p>
+	
+	<img id="fridge1" src="img/fridgesketch1.jpg">
+	<img id="fridge2" src="img/fridgesketch2.jpg">
+
+	<p class="text">To gain a visual understanding, we built a sketch model of one our designs. A pyramid shape was chosen because research showed that such a shape has a high surface area to volume ratio, meaning the most cooling will occur. However, a flaw with this deisgn was that the bottom of the fridge was inaccessible, and made this an impractical design.</p>
+
+	<img id="fridge3" src="img/fridgesketch3.jpg">
+	<img id="fridge4" src="img/fridgesketch4.jpg">
+
+	<p class="text">The design we settled upon was a cube shape, with a door at the front of the fridge. A water supply would be connected to the top of the system to replenish the water that evaporates out of the sand to keep a constant cooling effect. I drew a section view of the proposed model to outline how the system worked.</p>
+
+	<img id="fridge5" src="img/fridge1.jpg">
+	<img id="fridge6" src="img/fridge2.jpg">
+
+	<p class="text">To demonstrate that our design worked, we built a prototype. An exact model could not be built, but the intention was to show that the system decreased in temperature. After allowing the system to cool for a few hours, the thermometer showed a decrease in temperature, showing that our solution worked. Although this design fell short of the target temperature, the cooling effect was apparent.</p>
+
+	<p class="text">Read the full report <a target="_blank" style= "color:#0000EE;" href="DesignReport.pdf">here</a>.</p>
+
+</main>
+<footer></footer>
+</body>
+</html>
