--- a/windtunnel.html
+++ b/windtunnel.html
@@ -1,1 +1,41 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Kaarthic Pulogarajah</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="shortcut icon" href="img/icon4.png"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/style3.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
+</head>
+<header>
+			<div class="container">
+			
+			 	<img class = "back" src="img/background2.jpg">
+			</div>
+</header>
+<body>
+<main>
+
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+
+	<p id = "titleW">1315-MH Wind Tunnel</p>
+	<p class = "padP"></p>
+	<div class = "boxP">
+	<p class="text">In AP Physics, we were challenged to build a device capable of measuring the forces of lift and drag on an airfoil and the speed of the air in the wind tunnel.</p>
+	<p class="text">Before we started building, we were required to provide a complete report describing our designs for the project, the equipment we would use, and the research and theory that confirmed our hypotheses, proving that our designs will work.</p>
+	<p class="text">Design Report: <a target="_blank" style= "color:#0000EE;" href="Prospectus.pdf"><u><i>Design and Force Analysis of a Wind Tunnel</i></u></a></p>
+	<p class="text">Upon completing the research, we decided to use load cells to measure lift and drag, a brushless motor from a RC aircraft to power the fan, a 7-segment display to show windspeed or forces, a differential pressure gauge to measure windspeed, and an Arduino Mega to control input from all the sensors.</p>
+
+	<img id= "forces" src="img/loadcell.jpg">
+	<img id= "winds" src="img/anemometer.png">
+	<p class="text">The load cells (left) were selected to be able to measure forces on the scale of millinewtons. The differential pressure gauge (right) measured the difference in pressure between each tube. One tube would be placed into the wind, and the other perpendicular to the flow. Thus, the reading could then be converted to a wind speed using Bernoulli's equations.</p>
+	<img id= "winds2" src="img/wind tunnel2.jpg">
+	<img id= "winds3" src="img/wind tunnel3.jpg">
+	<p class="text">The final product was a structure laser cut from MDF and construction paper, with ports to accomodate the sensors, the battery for the fan, and the Arduino. The acrylic access hatch allowed easy visiblity into the tunnel and allowed airfoils to be placed inside easily. Overall, the wind tunnel worked as expected and read forces accurately.</p>
+
+</main>
+<footer></footer>
+</body>
+</html>
