--- a/experience.html
+++ b/experience.html
@@ -24,7 +24,7 @@
 	<p class = "padP"></p>
 	<div class = "boxP" style="padding-bottom:12%;">
 	<a target="_blank" class="link" href="resume.pdf"><img class="logo" src="img/adobe.png">Resume</a><br>
-	<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicpulogarajah"><img class="logo" src="img/linkedin.png">LinkedIn</a><br>
+	<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img class="logo" src="img/linkedin.png">LinkedIn</a><br>
 	<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a><br>
 
 
