--- a/traxxas.html
+++ b/traxxas.html
@@ -23,15 +23,19 @@
 	<p class = "titleP">Assistive Technology</p>
 	<p class = "padP"></p>
 	<div class = "boxP">
+
 	<img id= "trax" src="img\traxxas2.jpg">
 	<img id = "mac" src="img\mackenzie.jpg">
 	<p class="text">This fall, my group and I were given the challenge of creating assistive technology for our new classmate. Given a Traxxas Telluride RC car and a stuffed toy to represent our classmate, we had to build a device atop the car to transport our classmate to each of our classes with the requirement that our classmate had to be able to see the board from anywhere in the class.
 	</p>
-	<img id= "autocad" src="img\autocad.png">
+
+	<img id= "autocad" src="img\autocad.jpg">
 	<p class="text">Following the design process, I created preliminary designs on AutoCAD of the carriage where our classmate would sit. The design was intended to be laser cut and had interlocking pieces so that the structure could be held together by the pieces. However, this design did not allow our classmate to be able to see the board, since he was too close to the ground.</p>
-	<img id = "auto2" src="img\autocad2.png">
+
+	<img id = "auto2" src="img\autocad2.jpg">
 	<img id= "trax2" src="img\traxxas3.jpg">
 	<p class="text">The final design we decided upon used a pulley system with a horizontal wheel that allowed our classmate to be moved vertically by rolling the wheel slowly against a wall. The friction between the wheel and the wall caused the string to be pulled or released, allowing us to control the height of our classmate.</p>
+
 	<img id = "mac2" src="img\mackenzie2.jpg">
 	<img id = "mac3" src="img\mackenzie3.jpg">
 	<p class="text">This design was based on the same principles as an elevator, and uses a counterweight (hidden in strut) to ensure that our classmate does not fall down after he has been pulled up. The counterweight allows the car to be driven around a classroom with our classmate elevated. Between classes, he would be lowered for safe transportation, then again elevated at the next class.</p>
