Fix portfolio highlights

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</div>
 
 					<h2>Portfolio Highlights</h2>
-					<div style= "display: inline";>
+					<div>
 
 						<span class="cont">
 							<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
