Fixed compatibility on other devices

--- a/3d.html
+++ b/3d.html
@@ -76,7 +76,7 @@
 				img.onclick = function(){
 				    modal.style.display = "block";
 				    modalImg.src = "img/waterpumpback.png";
-				    captionText.innerHTML = "I made this water pump using ProDesktop as an assembly consisting of several parts, and using many features such as sweep, helix, shell, loft, fillet, and extrude.";
+				    captionText.innerHTML = "I created this water pump using ProDesktop as an assembly consisting of several parts, and using many features such as sweep, helix, shell, loft, fillet, and extrude.";
 				}
 
 				// Get the <span> element that closes the modal
@@ -207,7 +207,7 @@
 					img.onclick = function(){
 					    modal.style.display = "block";
 					    modalImg.src = "img/horseback.png";
-					    captionText.innerHTML = "I made this rocking horse model by taking measurements of this toy, then recreating the design on ProDesktop. I learnt to manage assemblies and use the different types of mates effectively.";
+					    captionText.innerHTML = "I constructed this rocking horse model by taking measurements of this toy, then recreating the design on ProDesktop. I learnt to manage assemblies and use the different types of mates effectively.";
 					}
 
 					// Get the <span> element that closes the modal
