--- a/3d.html
+++ b/3d.html
@@ -10,7 +10,7 @@
 </head>
 <header>
 			<div class="container">
-			
+
 			 	<img class = "back" src="img/background2.jpg">
 			</div>
 </header>
@@ -21,10 +21,10 @@
 
 		<p class = "titleP">3D Modelling</p>
 		<p class = "padP"></p>
-		
+
 		<div class = "boxP">
 		<!-- <div class="col"> -->
-			<span class="cont">
+			<div class="cont">
 				<img id = "portpic6" src="img/fsaecar.png">
 				<p class="cent">Formula Motorsports</p>
 
@@ -50,14 +50,13 @@
 					var span = document.getElementsByClassName("close")[0];
 
 					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() { 
+					span.onclick = function() {
 					    modal.style.display = "none";
 					}
 				</script>
 
-			</span>
-			<span class="portpad"></span>
-			<span class="cont">
+			</div>
+			<div class="cont">
 				<img id = "portpic1" src="img/waterpump.jpg" >
 				<p class="cent">Water Pump</p>
 
@@ -83,14 +82,13 @@
 				var span = document.getElementsByClassName("close")[1];
 
 				// When the user clicks on <span> (x), close the modal
-				span.onclick = function() { 
+				span.onclick = function() {
 				    modal.style.display = "none";
 				}
 				</script>
 
-			</span>
-			<span class="portpad"></span>
-			<span class="cont">
+			</div>
+			<div class="cont">
 				<img id = "portpic2" src="img/cellphonestand.png">
 				<p class="cent">Cell Phone Stand</p>
 
@@ -116,13 +114,12 @@
 					var span = document.getElementsByClassName("close")[2];
 
 					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() { 
+					span.onclick = function() {
 					    modal.style.display = "none";
 					}
 				</script>
-			</span>
-			<br><br>
-			<span class="cont">
+			</div>
+			<div class="cont">
 				<img id = "portpic3" src="img/trophy1.png">
 				<p class="cent">Trophy</p>
 
@@ -148,14 +145,14 @@
 					var span = document.getElementsByClassName("close")[3];
 
 					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() { 
+					span.onclick = function() {
 					    modal.style.display = "none";
 					}
 				</script>
 
-			</span>
-			<!-- <span class="portpad"></span>
-			<span class="cont">
+			</div>
+			<!--
+			<div class="cont">
 				<img id = "portpic4" src="img/matinv.png">
 				<p class="cent">ME100</p>
 
@@ -181,14 +178,13 @@
 					var span = document.getElementsByClassName("close")[4];
 
 					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() { 
+					span.onclick = function() {
 					    modal.style.display = "none";
 					}
 				</script>
 
-			</span> -->
-			<span class="portpad"></span>
-			<span class="cont">
+			</div> -->
+			<div class="cont">
 				<img id = "portpic5" src="img/horse4.jpg">
 				<p class="cent">Rocking Horse</p>
 
@@ -214,13 +210,13 @@
 					var span = document.getElementsByClassName("close")[4];
 
 					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() { 
+					span.onclick = function() {
 					    modal.style.display = "none";
 					}
 				</script>
 
-			</span>
-		<!-- </div> -->
+			</div>
+		<span></span>
 		</div>
 
 
