--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 		<header>
-				
 
-			 	
-			
+
+
+
 		</header>
 		<body>
 		<main>
 				<div class="container">
 				 	<img class = "back" src="img/background2.jpg">
-				</div> 
+				</div>
 
 				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
@@ -34,36 +34,38 @@
 			 	<div class = "box">
 					<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
-					<div class="col"><p class="about">About Me </p>
-					<p class="space">I am a mechanical engineering student, passionate about creating innovative solutions to complex ideas.</p><br> <!-- This break is to seperate onto next line -->
-
-					<span class="about">Personal Philosophy </span> <br>"Success is a journey, not a destination."<br><br>
-					<img class= "face" src="img/kaarthic.jpg" align="middle"> <br> 
-
-					<p class="about2">Interests </p> <p>I enjoy projects that require continuous learning and application of knowledge to optimize designs. </p><br>
+					<div class="col">
+						<div class="column">
+							<p class="about">About Me </p>
+							<p>I am a mechanical engineering student, passionate about creating innovative solutions to complex ideas.</p>
+						</div>
+						<div class="column">
+							<p class="about">Personal Philosophy </p>
+							<p>"Success is a journey, not a destination."</p>
+							<img src="img/kaarthic.jpg" style="width: 80%;">
+						</div>
+						<div class="column">
+							<p class="about">Interests</p>
+							<p>I enjoy projects that require continuous learning and application of knowledge to optimize designs.</p>
+						</div>
 					</div>
 
 					<h2>Portfolio Highlights</h2>
-					<div>
-
-						<span class="cont">
-							<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+					<div style="display: inline-block;">
+						<div class="cont">
+							<a href="windtunnel.html"><img class="portpics" src="img/wind tunnel2.jpg"></a>
 							<p class="cent">1315-MH Wind Tunnel</p>
-						</span>
-						<span class="portpad"></span>
-						<span class="cont">
-							<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
+						</div>
+						<div class="cont">
+							<a href="3d.html"><img class="portpics" src="img/waterpump.jpg"></a>
 							<p class="cent">3D Modelling</p>
-						</span>
-						<span class="portpad"></span>
-						<span class="cont">
-							<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
+						</div>
+						<div class="cont">
+							<a href="cpp.html"><img class="portpics" src="img/code.png"></a>
 							<p class="cent">C++ Projects</p>
-						</span>
+						</div>
 					</div>
-
 				</div>
 			</main>
-			<footer></footer>
 </body>
 </html>
