--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
 </head>
 <header>
 			<div class="container">
-			
+
 			 	<img class = "back" src="img/background2.jpg">
 			</div>
 </header>
@@ -22,7 +22,7 @@
 
 	<p class = "titleP">Experience</p>
 	<p class = "padP"></p>
-	<div class = "boxP" style="padding-bottom:12%;">
+	<div class = "boxP" style="width: 100%; padding-bottom: 12%;">
 	<a target="_blank" class="link" href="resume.pdf"><img class="logo" src="img/adobe.png">Resume</a><br>
 	<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img class="logo" src="img/linkedin.png">LinkedIn</a><br>
 	<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a><br>
