Added Garbage Collecting and Sorting Robot
Added details of 1B project into portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<div id="block">
 				<p class="iam">I am a <br> </p>
-			 	<div><p class="title"> Mechanical Engineer</p></div>
+			 	<div><p class="title"> Mechanical Designer</p></div>
 			 	<a href="portfolio.html" class="button1">Portfolio</a>
 			 	<a href="experience.html" class="button2">Experience</a>
 			 	</div>
