--- a/portfolio.html
+++ b/portfolio.html
@@ -27,31 +27,42 @@
 			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
 			<p class="cent">3D Modelling</p>
 		</span>
+
 		<span class="portpad"></span>
+
+
 		<span class="cont">
-			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent">C++ Projects</p>
+			<a href="garbageRobot.html"><img class = "portpics" src="img/robotcover.jpg"></a>
+			<p class="cent">Garbage Collector and Sorter Robot</p>
 		</span>
+
+
 		<span class="portpad"></span>
-		<!-- <span class="cont">
-			<a href="autocad.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-			<p class="cent">AutoCAD</p>
-		</span> -->
 		
 		<span class="cont">
 			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
 			<p class="cent">1315-MH Wind Tunnel</p>
 		</span>
+
 		<br><br>
+
 		<span class="cont">
 			<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
 			<p class="cent">Assistive Technology</p>
 		</span>
 		
 		<span class="portpad"></span>
+
 		<span class="cont">
 			<a href="fridge.html"><img class = "portpics" src="img/ice.jpg"></a>
 			<p class="cent">Freezing and Cooling Technologies</p>
+		</span>
+
+		<span class="portpad"></span>
+
+		<span class="cont">
+			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
+			<p class="cent">C++ Projects</p>
 		</span>
 		
 	</div>
