Matlab added into portfolio
Details of matlab planet simulation need to be added

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,26 +17,29 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience    </span></a> <span><img class= "downbutton"  src="img/downbutton2.png" onclick="scroll()"></span></div>
+		<script>
+		function scroll() {
+		    window.scrollBy(0, 1000);
+		    
+		}
+		</script>
 
 	<p class = "titleP">Portfolio</p>
 	<p class = "padP"></p>
 	<div class = "boxP">
 		
 		<span class="cont">
-			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-			<p class="cent">3D Modelling</p>
-		</span>
-
-		<span class="portpad"></span>
-
-
-		<span class="cont">
 			<a href="garbageRobot.html"><img class = "portpics" src="img/robotcover.jpg"></a>
 			<p class="cent">Garbage Collector and Sorter Robot</p>
 		</span>
+		<span class="portpad"></span>
+		
 
-
+		<span class="cont">
+			<a href="matlab.html"><img class = "portpics" src="img/matlabicon.png"></a>
+			<p class="cent">Matlab Projects</p>
+		</span>
 		<span class="portpad"></span>
 		
 		<span class="cont">
@@ -44,26 +47,32 @@
 			<p class="cent">1315-MH Wind Tunnel</p>
 		</span>
 
-		<br><br>
+	<br><br>
+
+		<span class="cont">
+			<a href="3d.html"><img class = "portpics" src="img/trophy1.png"></a>
+			<p class="cent">3D Modelling</p>
+		</span>
+		<span class="portpad"></span>
 
 		<span class="cont">
 			<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
 			<p class="cent">Assistive Technology</p>
 		</span>
-		
-		<span class="portpad"></span>
-
-		<span class="cont">
-			<a href="fridge.html"><img class = "portpics" src="img/ice.jpg"></a>
-			<p class="cent">Freezing and Cooling Technologies</p>
-		</span>
-
 		<span class="portpad"></span>
 
 		<span class="cont">
 			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
 			<p class="cent">C++ Projects</p>
 		</span>
+
+	<br><br>
+
+		<span class="cont">
+			<a href="fridge.html"><img class = "portpics" src="img/ice.jpg"></a>
+			<p class="cent">Freezing and Cooling Technologies</p>
+		</span>
+		<span class="portpad"></span>
 		
 	</div>
 
