--- a/planetsim.html
+++ b/planetsim.html
@@ -24,40 +24,27 @@
 	<p class = "padP"></p>
 	<div class = "boxP">
 
-	
-	<p><b style="font-size:125%" >Claw Design and Lifting Mechanism</b></p>
+	<p class="text">The objective of this project was to use Matlab to create an accurate 2-D simulation of the planets (and Pluto) orbiting the sun in our solar system. To acheieve this goal, I followed a several step procedure. The first step was to collect all relevant data on the planets in the solar system. This included number of orbit days, major and minor axes of the elliptical orbit, and tilt of the ellipse relative to standard position.</p>
+	<p class="text">Once the data was collected or calculated, I compiled it into an Excel spreadsheet to be read by the Matlab script. Next, the position of the planets on August 8th, 2017 was calculated from http://www.theplanetstoday.com/, to be used as a baseline from which to start the simulation.</p>
 
-	<p class="text"> The claw had to serve two purposes: grabbing the garbage in its claws and lifting the garbage to a certain height so that it can be sorted. The challenge was to accomplish this using one motor. Several claw designs were considered such as horizontal and vertical clasping claws and vertical crane type claws. Horizontal clasping claws meant that any vertical motion would be difficult, and the crane claw would be hard to control motion, so the vertical clasping claw design was chosen and an appropriate lifting mechanism was designed.</p>
+	<img id="planets1" src="img/planetsaug08.png">
+	<img id="planets2" src="img/planetsdata.png">
 
-	<img id="robot1" src="img/robotclaw.png">
-	<img id="robot2" src="img/robotlifting.jpg">
+	<p class="text">Next, the ellipse itself had to be plotted for each planet. I used parametric equations to use an independent variable to draw the ellipse for a given planet, using the data collcected from the Excel sheet. In order to fully define a planet on its elliptical orbit, I had to start the simulation at its initial position, shift the ellipse according to its perihelion and aphelion, and rotate the ellipse so that it resembled the true orbit of the planet.</p>
+	<p class="text">The offset and shifts were easily solved by adding the values in the appropriate place. To rotate the ellipse, I used a rotation matrix to apply a rotation transformation to the figure. This causes each point in the orbit to be rotated by a given amount before being displayed, thus making the entire ellipse rotate.</p>
 
-	<p class="text">The lifting mechanism would be connected to the claw by using a 3D printed rack and pinion system that had some resistance to it. The mechanism was designed such that if a quick, large force were applied, the claw would close, but any small and steady force would cause the arm to rotate backwards, lifting the garbage.</p>
+	<img id="planets3" src="img/planetsfun3.png">
 
-	<img id="robot3" src="img/robotrack.jpg">
-	<img id="robot4" src="img/robotrackassembly.jpg">
-	<img id="robot5" src="img/robotclawcomplete.png">
+	<p class="text">Once each planet could be plotted, I put it all together to make all the planets move together. As an add on, I made it possible to calculate the distance between any planet at the end of the simulation. Lastly, the user was given the control to choose how many days to run the simulation, day increment for each iteration, as well as the planet from which to calculate the final distances.</p>
 
-	<p><b style="font-size:125%" >Sorting Mechanism</b></p>
+	<img id="planets4" src="img/planetsdist.png">
+	<img id="planets5" src="img/planetsfig1.jpg">
 
-	<p class="text">Two different methods to sort garbage were explored. In both cases, the colour of the garbage is detected using a colour sensor. The first method was to drive the robot to a garbage station at a predetermined location, deposit the garbage in the correct bin, then continue looking for more garbage. The second method was for the robot to carry the garbage station behind itself and the arm to rotate around and drop the trash into the right colour coded bin. The advantage of the second method was that it would be more time efficient, since the robot would not have to drive to the bin each time. However, a mechanism to rotate the arm had to be designed to make this method possible.</p>
+	<p class="text">Final Possible Simulation Results:</p>
+	<img id="planets6" src="img/planetsim1.gif">
+	<img id="planets6" src="img/planetsim2.gif">
 
-	<img id="robot6" src="img/robotsorting1.jpg">
-	<img id="robot7" src="img/robotsorting3.jpg"><br>
-	<img id="robot8" src="img/robotsorting2.png">
-
-	<p class="text">A gear system was used to rotate the arm backwards to the bin. The amount of rotation was determined by the detected colour of the garbage so that it could be sorted into the appropriate bin. A challenge with this mechanism was that the weight of the arm caused the structure to bend forward, causing the gear teeth to disengage unexpectedly. This issue was resolved by making the gears thicker and reinforcing the platform with more Lego so that it would be more rigid.</p>
-
-	<p><b style="font-size:125%" >Searching Method</b></p>
-
-	<p class="text">This robot was programmed in RobotC and a method was written to detect garbage using a sonar sensor. Upon starting the program, the robot would turn slowly, making one revolution, while trying to detect an object around it. If an object is detected, the robot will travel to it, and pick up and sort the garbage. If an object is not detected, the robot will travel forward for a few seconds then search again until it finds garbage. As this experiment was conducted on a white board with a black border, a light intensity sensor was used to turn the robot around if it was headed off the board.</p>
-
-	<img id="robot9" src="img/robotsearch2.gif">
-
-	<p class="text">The final challenge of this project was to ensure the lifting and sorting mechanisms worked in unison with the searching method. </p>
-
-	<img id="robot9" src="img/robotcomplete.gif">
-	<p class="text">The robot detects the object in front of it, causing it to travel to the object slowly, then lift it and drop it in the bin designated for red. Finally, it brings the claw back to its original position so that more garbage can be collected. </p>
+	<p>Github Link: <a target="_blank" style= "color:#0000EE;" href="https://github.com/KaarthicPulogarajah/Planet-Simulation"><i>Planets Simulation</i></a></p>
 
 </main>
 <footer></footer>
