Some images and text changed

--- a/3d.html
+++ b/3d.html
@@ -43,7 +43,7 @@
 					img.onclick = function(){
 					    modal.style.display = "block";
 					    modalImg.src = "img/fsaeback2.png";
-					    captionText.innerHTML = "This fall I joined the Formula Motorsports student design team. As part of this team, I created the chain guard for the 2017 racecar using Solidworks (shown in purple on the left). The part was designed in adherence to the competition rules, while improving the design of the 2016 chain guard design.";
+					    captionText.innerHTML = "In Fall 2016 I joined the Formula Motorsports student design team. As part of this team, I created the chain guard for the 2017 racecar using Solidworks (shown in purple on the left). The part was designed in adherence to the competition rules, while improving the design of the 2016 chain guard design.";
 					}
 
 					// Get the <span> element that closes the modal
