--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p class="cent">1315-MH Wind Tunnel</p>
 						</div>
 						<div class="cont">
-							<a href="3d.html"><img class="portpics" src="img/waterpump.jpg"></a>
+							<a href="3d.html"><img class="portpics" src="img/trophy1.png"></a>
 							<p class="cent">3D Modelling</p>
 						</div>
 						<div class="cont">
