--- a/planetsim.html
+++ b/planetsim.html
@@ -37,7 +37,7 @@
 
 	<p class="text">Once each planet could be plotted, I put it all together to make all the planets move together. As an add on, I made it possible to calculate the distance between any planet at the end of the simulation. Lastly, the user was given the control to choose how many days to run the simulation, day increment for each iteration, as well as the planet from which to calculate the final distances.</p>
 
-	<img id="planets4" src="img/planetsdist.png">
+	<img id="planets4" src="img/planetsdist.PNG">
 	<img id="planets5" src="img/planetsfig1.jpg">
 
 	<p class="text">Final Possible Simulation Results:</p>
